css fix and removed router wrapping round app.js

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
   background-size: 25px;
   padding-top: 30px;
   cursor: pointer;
+  text-decoration: none;
 }
 
 .win-icon {
